[bp/r71061][FIX] mobile: tiki check button not appearing on mobile

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -1772,7 +1772,8 @@ td.url {
         padding: 0.25rem 0.75rem 0.5rem;
         border-top: none;
         text-align: left !important;
-        position: relative; }
+        position: relative;
+        word-break: break-word; }
         .table-responsive.large-table .table:not(.tablesorter) tbody td:after {
           display: block;
           clear: both;
